# ascify

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
examples/: vector_add.cu  vector_add.cu.dpp
src/: ArgParse.cpp  ArgParse.h  AscifyAction.cpp  AscifyAction.h  CUDA2DPP.cpp  CUDA2DPP.h  CUDA2DPP_Runtime_API_functions.cpp  ImplicitCudaHeaders.cpp  ImplicitCudaHeaders.h  LLVMCompat.cpp  LLVMCompat.h  LocalHeader.cpp  LocalHeader.h  ReplacementsFrontendActionFactory.h  Statistics.cpp  Statistics.h  StringUtils.cpp  main.cpp
